--- a/app/model/password.py.dist
+++ b/app/model/password.py.dist
@@ -1,6 +1,8 @@
 #! /usr/bin/env python3
 # coding: utf-8
 
+""" Necessary information to connect the application to your MySQL Database """
+
 HOST = "HOST"
 USERNAME = "USERNAME"
 PASSWORD = "PASSWORD"
